2008-02-02  Sven Herzberg  <sven@imendio.com>

	Fix signedness warnings.

	* src/keys.c: (keys_xnest_connect): use an unsigned int for the number
	of children

2007-11-25  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	* NEWS:
	* xoo.doap:
	Version 0.8.

2007-11-25  Ross Burton  <ross@openedhand.com>

	* data/:
	Remove 770 skin.

2007-11-25  Ross Burton  <ross@openedhand.com>

	* src/main.c:
	Make the iPaq 4700 the default skin.

2007-11-25  Ross Burton  <ross@openedhand.com>

	* data/xoo.desktop:
	Remove Application category.

2007-11-14  Richard Purdie  <rpurdie@opened.com>
 
	* configure.ac:
	Stop -L/lib being added to compiler commandline and breaking builds
	$expat variable isn't used.

2007-08-06  Ross Burton  <ross@openedhand.com>

	* data/Makefile.am:
	* data/ipaq4700.xml:
	* data/ipaq4700.png:
	Add iPaq 4700 skin, thanks to kmeaw.

2007-05-21  Ross Burton  <ross@openedhand.com>

	* data/Makefile.am:
	* data/nokia-n800.xml:
	* data/nokia-n800.png:
	Add Nokia N800 skin, thanks to Renato Araujo, and INdT for the image.

2007-01-15  Ross Burton  <ross@openedhand.com>

	* src/main.c:
	Use Xephyr by default, and attempt to find a spare display instead
	of hard-coding :1.

2006-02-10  Ross Burton  <ross@openedhand.com>

	* src/config.c:
	Fix compile warnings.

2006-02-10  Ross Burton  <ross@openedhand.com>

	* data/Makefile.am:
	* data/nokia-770.png:
	* data/nokia-770.xml:
	Add the start of a Nokia 770 skin.

2006-02-10  Ross Burton  <ross@openedhand.com>

	* src/main.c:
	* src/callbacks.c:
	Use NULL rather than 0 to end execl() so that GCC doesn't
	complain.

2005-09-30  Ross Burton  <ross@openedhand.com>

	* data/Xoo.glade:
	* src/main.c:
	* src/fakedev.h:
	Don't set the device image as the back buffer for the fixed
	window, but rather use a GtkImage like normal people.

2005-09-05  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	* NEWS:
	Version 0.7.

2005-08-15  Ross Burton  <ross@openedhand.com>

	* src/main.c:
	* src/callbacks.c: